--- a/index.html
+++ b/index.html
@@ -99,17 +99,17 @@
             <div class="producto">
                 <img src="Imagenes/PREMIER LEAGUE/MANCHESTER UNITED/AWAY (1).jpg" alt="UNITED" class="zoomable">
                 <h3>Manchester United 24/25 AWAY</h3>
-                <p>25€</p>
+                <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
                 <img src="Imagenes/SERIE A/JUVENTUS/THIRD (7).jpg" alt="Juventus de Turín 24/25 ALTERNATIVA" class="zoomable">
                 <h3>Juventus de Turín 24/25 ALTERNATIVA</h3>
-                <p>25€</p>
+                <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
                 <img src="Imagenes/BUNDESLIGA/BAYERN MUNICH/THIRD (10).jpg" alt="Bayern de Munich 24/25 ALTERNATIVA" class="zoomable">
                 <h3>Bayern de Munich 24/25 ALTERNATIVA</h3>
-                <p>25€</p>
+                <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
                 <img src="Imagenes/RETRO/LA LIGA/ATLETICO DE MADRID/HOME 2004-05.jpg" alt="ATM 04-05" class="zoomable">
@@ -124,17 +124,17 @@
             <div class="producto">
                 <img src="Imagenes/LALIGA/Real Madrid/HOME.jpg.webp" alt="Real Madrid 24/25 HOME"class="zoomable">
                 <h3>Real Madrid 24/25 HOME</h3>
-                <p>25€</p>
+                <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
                 <img src="Imagenes/LALIGA/FC Barcelona/AWAY.jpg" alt="FC Barcelona 24/25 AWAY"class="zoomable">
                 <h3>FC Barcelona 24/25 AWAY</h3>
-                <p>25€</p>
+                <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
                 <img src="Imagenes/PREMIER LEAGUE/CHELSEA/AWAY (2).jpg" alt="Chealsea 24/25 AWAY"class="zoomable">
                 <h3>Chealsea 24/25 AWAY</h3>
-                <p>25€</p>
+                <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
                 <img src="Imagenes/RETRO/OTRAS LIGAS/SANTOS/HOME 2011-2012.jpg" alt="Camiseta más vendida 4"class="zoomable">
