--- a/primeiraLiga.html
+++ b/primeiraLiga.html
@@ -164,7 +164,15 @@
     </section>
 
     <footer>
-        &copy; 2025 Puro Toque. Todos los derechos reservados.
+    
+        <section id="pagos">
+            <div class="pagos-iconos">
+                <img src="Imagenes/Redes sociales/PAYPAL.png" alt="PayPal">
+                <img src="Imagenes/Redes sociales/TRANSFERENCIA.png" alt="Transferencia">
+            </div>
+        </section>
+    
+        <p>&copy; 2025 Puro Toque. Todos los derechos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
