--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Puro Toque - Catálogo</title>
     <link rel="stylesheet" href="disenno.css">
 </head>
-<body>
+<body id="container">
     <header>
         <img src="Imagenes/LOGO_PUROTOQUE.png" alt="Logo Puro Toque">
     </header>
@@ -165,7 +165,15 @@
     </section>
 
     <footer>
-        &copy; 2025 Puro Toque. Todos los derechos reservados.
+    
+        <section id="pagos">
+            <div class="pagos-iconos">
+                <img src="Imagenes/Redes sociales/PAYPAL.png" alt="PayPal">
+                <img src="Imagenes/Redes sociales/TRANSFERENCIA.png" alt="Transferencia">
+            </div>
+        </section>
+    
+        <p>&copy; 2025 Puro Toque. Todos los derechos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
