--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         <p>-----------------------------------------------------------------</p>
         <p><b>Disponemos de todas nuestras camisetas en versión FAN y PLAYER.</b></p>
         <p>Nuestra recomendación: <b>Edición FAN, talla habitual. Edición PLAYER, una talla más de la talla habitual.</b></p>
+        <p><b>Serigrafía: 2€ - Cada Parche: 1€</b></p>
     </section>
 
     <div id="modal">
