--- a/Hypermotion.html
+++ b/Hypermotion.html
@@ -162,7 +162,7 @@
                 <p>23€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/MALAGA/THIRD.jpg" alt="Camiseta Málaga"class="zoomable">
+                <img src="Imagenes/LIGA HYPERMOTION/MALAGA/THIRD.jpg" alt="Camiseta Málaga 3"class="zoomable">
                 <h4>Camiseta Alternativa</h4>
                 <p>23€</p>
             </div>
