--- a/MLS.html
+++ b/MLS.html
@@ -103,7 +103,7 @@
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/MLS/INTER MIAMI/THIRD.jpg" alt="Camiseta Inter Miami 3"class="zoomable">
+                    <img src="Imagenes/MLS/INTER MIAMI/THIRD.jpg" alt="Camiseta Inter Miami"class="zoomable">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
